Using flexbox CSS to orient task chiclets in a centered, vertical column.  I believe I've included CSS to support most modern browsers.  It renders correctly on Safari, Firefox, and Chrome.  I haven't tested IE.

--- a/time_tracker.css
+++ b/time_tracker.css
@@ -3,10 +3,31 @@ form {
     padding-bottom: 15px;
 }
 
+#TaskList {
+   display: -webkit-box;   /* OLD: Safari, iOS, Android browser, older WebKit browsers. */
+   display: -ms-flexbox;   /* MID: IE 10                                                */
+   display: -webkit-flex;  /* NEW, Chrome 21+                                           */
+   display: flex;          /* NEW: Opera 12.1, Firefox 22+                              */
+
+   -webkit-box-orient: vertical;
+   -ms-flex-direction: column;
+   -webkit-flex-direction: column;
+   flex-direction: column;
+
+   -webkit-box-align: center;
+   -ms-flex-align: center;
+   -webkit-align-items: center;
+   align-items: center;
+
+   -webkit-box-pack: center;
+   -ms-flex-pack: center; 
+   -webkit-justify-content: center;
+   justify-content: center;
+}
+
 .main_task_div {
     cursor: pointer;
     position: relative;
-    width: 100px;
 }
 
 .close_task_div {
@@ -23,35 +44,33 @@ form {
     font-weight: 100;
     font-size: xx-large;
     padding: 1px;
+    text-align: center;
 }
 
 .task_current {
     width: 100px;
-    padding: 0px;
-    padding-top: 10px;
+    padding: 10px 5px 0px 5px;
     background: #fca44c;
     border: 1px solid #fca44c;
 }
 
 .task_current_mouseover {
     width: 100px;
-    padding: 0px;
-    padding-top: 10px;
+    padding: 10px 5px 0px 5px;
     background: #fca44c;
     border: 1px solid black;
 }
 
 .task_mouseover {
     width: 100px;
-    padding: 0px;
-    padding-top: 10px;
+    padding: 10px 5px 0px 5px;
     background: #d4d4d4;
     border: 1px solid black;
 }
 
 .task_inactive {
     width: 100px;
-    padding-top: 10px;
+    padding: 10px 5px 0px 5px;
     background: #d4d4d4;
     border: 1px solid #d4d4d4;
 }
